# aws-serverless-datamesh-framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PYPI.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/rulesets/: README.md  org-main-standard.json  org-main-strict.json  repo-develop-light.json  repo-main-solo.json  repo-main-standard.json  repo-main-strict.json  repo-release-tags.json
.github/workflows/: benchmark.yml  ci.yml  publish.yml  smoke-aws.yml
benchmarks/: README.md  run_aws_benchmark.py  run_benchmark.sh  run_cost_estimate.py  run_local_benchmark.py
benchmarks/results/: 2026-06-baseline.json
benchmarks/workloads/: 100k_rows.py  10m_rows.py  1m_rows.py
docs/: architecture.md  blog-the-vaquar-pattern.md  data-mesh-end-to-end.md  data-mesh-patterns.md  deployment.md  domain-contracts.md  first-mesh-on-aws.md  getting-started.md  glue-connector.md  mesh-trust-dashboard.md  metadata-driven-pipeline.md  observability-production.md  portable-multi-cloud.md  pypi.md  sparkrules-connector.md  terraform-guide.md  vaquar-pattern.md  why-serverless-data-mesh.md
eval/: validate_then_commit_benchmark.py
examples/contracts/: payments.mesh.pipeline.yaml
examples/domain_writer/: README.md  handler.py  io.py  rules_io.py  spark_io.py  workload.py
examples/medallion-e2e/: README.md  northstar.mesh.yaml
examples/multi-domain-orders-payments/: README.md  coordinator_config.yaml  test_atomicity.py
examples/multi-domain-orders-payments/domains/orders/: handler.py
examples/multi-domain-orders-payments/domains/payments/: handler.py
examples/retail-mesh/: README.md  compile_all.py  mesh-registry.yaml
examples/retail-mesh/contracts/: customers.mesh.pipeline.yaml  inventory.mesh.pipeline.yaml  orders.mesh.pipeline.yaml  payments.mesh.pipeline.yaml  shipping.mesh.pipeline.yaml
examples/retail-mesh/mesh-transactions/: daily-close.yaml
examples/retail-mesh/spark/: orders_readers.example.py
examples/tutorials/: README.md  verification_gate_demo.py  walkthrough.py
infrastructure/grafana/: mesh-trust-dashboard.json
infrastructure/sam/: README.md  template.yaml
infrastructure/terraform/: README.md
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars.example
infrastructure/terraform/environments/medallion/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/terraform/environments/multi-account/: README.md
infrastructure/terraform/environments/prod/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/governance/: main.tf
infrastructure/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/terraform/modules/lambda-fleet/: main.tf  outputs.tf
infrastructure/terraform/modules/medallion-mesh/: main.tf  outputs.tf
infrastructure/terraform/modules/messaging/: main.tf  outputs.tf
infrastructure/terraform/modules/monitoring/: dashboard.tf  main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/stepfunctions/: main.tf  outputs.tf  state_machine.asl.json.tpl  variables.tf
infrastructure/terraform/scripts/: package_lambda.ps1  package_lambda.sh
integrations/backstage/: README.md
schemas/: sdm-v1-dataproductpipeline.json  sdm-v1-medallionmesh.json
scripts/: aws_dlq_smoke_test.sh  aws_observability_smoke.sh  check_terraform_encoding.py  sync_version.py
src/serverless_data_mesh/: __init__.py  cli.py  config.py  exceptions.py
src/serverless_data_mesh/catalog/: __init__.py  glue_connector.py  glue_rest.py
src/serverless_data_mesh/catalog_export/: __init__.py  backstage.py
src/serverless_data_mesh/compile/: __init__.py  contract.py  emit.py  from_init.py  loader.py  medallion.py  medallion_emit.py  medallion_validate.py  runtime.py  validate.py  wizard.py
src/serverless_data_mesh/dashboard/: __init__.py  cloudwatch.py  trust.py
src/serverless_data_mesh/deploy/: __init__.py  runner.py
src/serverless_data_mesh/governance/: __init__.py  consumer_sla.py
src/serverless_data_mesh/lineage/: __init__.py  openlineage.py
src/serverless_data_mesh/local/: __init__.py  runtime.py
src/serverless_data_mesh/metrics/: __init__.py  mesh_trust.py
src/serverless_data_mesh/observability/: __init__.py  structured.py
src/serverless_data_mesh/orchestration/: __init__.py  canary.py  coordinator.py  durable_steps.py  reprocess.py  state.py
src/serverless_data_mesh/portable/: __init__.py  cloud.py
src/serverless_data_mesh/readers/: __init__.py  s3_bronze.py  upstream_parquet.py
src/serverless_data_mesh/rules/: __init__.py  sparkrules_connector.py
src/serverless_data_mesh/scaffold/: __init__.py  init_domain.py
src/serverless_data_mesh/templates/: medallion-starter.mesh.yaml  single-pipeline.mesh.yaml
src/serverless_data_mesh/types/: __init__.py  workload.py
src/serverless_data_mesh/ui/: __init__.py  server.py
src/serverless_data_mesh/verification/: __init__.py  backend.py  fallback.py  vrp.py
tests/: conftest.py
tests/eval/: test_consumer_safety.py
tests/unit/: test_auto_repair_demo.py  test_canary.py  test_catalog.py  test_catalog_export.py  test_cli_scaffold.py  test_compile.py  test_config.py  test_consumer_sla.py  test_deploy.py  test_example_workload.py  test_fallback_verifier.py  test_local_runtime.py  test_medallion.py  test_metrics.py  test_observability.py  test_openlineage.py  test_reference_readers.py  test_reprocess.py  test_schemas.py  test_sparkrules_connector.py  test_types.py  test_verification.py  test_version.py  test_wizard.py
(+9 files in other folders)
